[project]
name = "cp-upsolve-helper"
version = "0.0.1"
authors = [
  { name="Skanda Kaashyap", email="skandakk@gmail.com" },
]
description = "UT wrapper helpers for upsolving competitive programming questions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kaashmonee/cp-upsolve-helper"
